src/XplParser.java
// $ANTLR 3.1 Xpl.g 2008-09-25 11:12:48

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class XplParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CALL", "CALL_ARGUMENTS", "WHILE", "WHILE_BODY", "IF", "IF_BODY", "ELSE", "ELSE_BODY", "METHOD", "METHOD_BODY", "RETURN", "IDENTIFIER", "NUMBER", "STRING", "NEWLINE", "WS", "'end'", "'method'", "'('", "')'", "','", "'if'", "'else'", "'while'", "'='", "'&&'", "'||'", "'=='", "'<='", "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'return'"
    };
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int WHILE=6;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int ELSE=10;
    public static final int NUMBER=16;
    public static final int ELSE_BODY=11;
    public static final int EOF=-1;
    public static final int IF=8;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=19;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int NEWLINE=18;
    public static final int T__35=35;
    public static final int CALL_ARGUMENTS=5;
    public static final int T__36=36;
    public static final int METHOD_BODY=13;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int IDENTIFIER=15;
    public static final int RETURN=14;
    public static final int CALL=4;
    public static final int IF_BODY=9;
    public static final int METHOD=12;
    public static final int WHILE_BODY=7;
    public static final int STRING=17;

    // delegates
    // delegators


        public XplParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public XplParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return XplParser.tokenNames; }
    public String getGrammarFileName() { return "Xpl.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // Xpl.g:7:1: program : ( ( method_definition | atomic_operation ) ( newline )? )+ ;
    public final XplParser.program_return program() throws RecognitionException {
        XplParser.program_return retval = new XplParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        XplParser.method_definition_return method_definition1 = null;

        XplParser.atomic_operation_return atomic_operation2 = null;

        XplParser.newline_return newline3 = null;



        try {
            // Xpl.g:7:8: ( ( ( method_definition | atomic_operation ) ( newline )? )+ )
            // Xpl.g:7:26: ( ( method_definition | atomic_operation ) ( newline )? )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // Xpl.g:7:26: ( ( method_definition | atomic_operation ) ( newline )? )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=IDENTIFIER && LA3_0<=STRING)||(LA3_0>=21 && LA3_0<=22)||LA3_0==25||LA3_0==27||LA3_0==41) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // Xpl.g:7:27: ( method_definition | atomic_operation ) ( newline )?
            	    {
            	    // Xpl.g:7:27: ( method_definition | atomic_operation )
            	    int alt1=2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0==21) ) {
            	        alt1=1;
            	    }
            	    else if ( ((LA1_0>=IDENTIFIER && LA1_0<=STRING)||LA1_0==22||LA1_0==25||LA1_0==27||LA1_0==41) ) {
            	        alt1=2;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 1, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt1) {
            	        case 1 :
            	            // Xpl.g:7:28: method_definition
            	            {
            	            pushFollow(FOLLOW_method_definition_in_program80);
            	            method_definition1=method_definition();

            	            state._fsp--;
            	            if (state.failed) return retval;
            	            if ( state.backtracking==0 ) adaptor.addChild(root_0, method_definition1.getTree());

            	            }
            	            break;
            	        case 2 :
            	            // Xpl.g:7:48: atomic_operation
            	            {
            	            pushFollow(FOLLOW_atomic_operation_in_program84);
            	            atomic_operation2=atomic_operation();

            	            state._fsp--;
            	            if (state.failed) return retval;
            	            if ( state.backtracking==0 ) adaptor.addChild(root_0, atomic_operation2.getTree());

            	            }
            	            break;

            	    }

            	    // Xpl.g:7:66: ( newline )?
            	    int alt2=2;
            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0==NEWLINE) ) {
            	        alt2=1;
            	    }
            	    switch (alt2) {
            	        case 1 :
            	            // Xpl.g:7:66: newline
            	            {
            	            pushFollow(FOLLOW_newline_in_program87);
            	            newline3=newline();

            	            state._fsp--;
            	            if (state.failed) return retval;
            	            if ( state.backtracking==0 ) adaptor.addChild(root_0, newline3.getTree());

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class atomic_operation_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "atomic_operation"
    // Xpl.g:9:1: atomic_operation : ( conditional | loop | assignment | expression | return_expression );
    public final XplParser.atomic_operation_return atomic_operation() throws RecognitionException {
        XplParser.atomic_operation_return retval = new XplParser.atomic_operation_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        XplParser.conditional_return conditional4 = null;

        XplParser.loop_return loop5 = null;

        XplParser.assignment_return assignment6 = null;

        XplParser.expression_return expression7 = null;

        XplParser.return_expression_return return_expression8 = null;



        try {
            // Xpl.g:9:17: ( conditional | loop | assignment | expression | return_expression )
            int alt4=5;
            switch ( input.LA(1) ) {
            case 25:
                {
                alt4=1;
                }
                break;
            case 27:
                {
                alt4=2;
                }
                break;
            case IDENTIFIER:
                {
                int LA4_3 = input.LA(2);

                if ( (LA4_3==EOF||(LA4_3>=IDENTIFIER && LA4_3<=NEWLINE)||(LA4_3>=20 && LA4_3<=22)||LA4_3==25||LA4_3==27||(LA4_3>=29 && LA4_3<=41)) ) {
                    alt4=4;
                }
                else if ( (LA4_3==28) ) {
                    alt4=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 3, input);

                    throw nvae;
                }
                }
                break;
            case NUMBER:
            case STRING:
            case 22:
                {
                alt4=4;
                }
                break;
            case 41:
                {
                alt4=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // Xpl.g:9:26: conditional
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_conditional_in_atomic_operation104);
                    conditional4=conditional();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, conditional4.getTree());

                    }
                    break;
                case 2 :
                    // Xpl.g:9:40: loop
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_loop_in_atomic_operation108);
                    loop5=loop();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, loop5.getTree());

                    }
                    break;
                case 3 :
                    // Xpl.g:9:47: assignment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_assignment_in_atomic_operation112);
                    assignment6=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment6.getTree());

                    }
                    break;
                case 4 :
                    // Xpl.g:9:60: expression
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_expression_in_atomic_operation116);
                    expression7=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression7.getTree());

                    }
                    break;
                case 5 :
                    // Xpl.g:9:73: return_expression
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_return_expression_in_atomic_operation120);
                    return_expression8=return_expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, return_expression8.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "atomic_operation"

    public static class atomic_operations_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "atomic_operations_list"
    // Xpl.g:11:1: atomic_operations_list : ( atomic_operation ( newline )? )+ ;
    public final XplParser.atomic_operations_list_return atomic_operations_list() throws RecognitionException {
        XplParser.atomic_operations_list_return retval = new XplParser.atomic_operations_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        XplParser.atomic_operation_return atomic_operation9 = null;

        XplParser.newline_return newline10 = null;



        try {
            // Xpl.g:11:23: ( ( atomic_operation ( newline )? )+ )
            // Xpl.g:11:26: ( atomic_operation ( newline )? )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // Xpl.g:11:26: ( atomic_operation ( newline )? )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=IDENTIFIER && LA6_0<=STRING)||LA6_0==22||LA6_0==25||LA6_0==27||LA6_0==41) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // Xpl.g:11:27: atomic_operation ( newline )?
            	    {
            	    pushFollow(FOLLOW_atomic_operation_in_atomic_operations_list129);
            	    atomic_operation9=atomic_operation();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, atomic_operation9.getTree());
            	    // Xpl.g:11:44: ( newline )?
            	    int alt5=2;
            	    int LA5_0 = input.LA(1);

            	    if ( (LA5_0==NEWLINE) ) {
            	        alt5=1;
            	    }
            	    switch (alt5) {
            	        case 1 :
            	            // Xpl.g:11:45: newline
            	            {
            	            pushFollow(FOLLOW_newline_in_atomic_operations_list132);
            	            newline10=newline();

            	            state._fsp--;
            	            if (state.failed) return retval;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "atomic_operations_list"

    public static class method_definition_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_definition"
    // Xpl.g:13:1: method_definition : method_header method_body 'end' -> ^( METHOD method_header METHOD_BODY method_body ) ;
    public final XplParser.method_definition_return method_definition() throws RecognitionException {
        XplParser.method_definition_return retval = new XplParser.method_definition_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal13=null;
        XplParser.method_header_return method_header11 = null;

        XplParser.method_body_return method_body12 = null;


        CommonTree string_literal13_tree=null;
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleSubtreeStream stream_method_body=new RewriteRuleSubtreeStream(adaptor,"rule method_body");
        RewriteRuleSubtreeStream stream_method_header=new RewriteRuleSubtreeStream(adaptor,"rule method_header");
        try {
            // Xpl.g:13:18: ( method_header method_body 'end' -> ^( METHOD method_header METHOD_BODY method_body ) )
            // Xpl.g:13:26: method_header method_body 'end'
            {
            pushFollow(FOLLOW_method_header_in_method_definition150);
            method_header11=method_header();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_method_header.add(method_header11.getTree());
            pushFollow(FOLLOW_method_body_in_method_definition152);
            method_body12=method_body();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_method_body.add(method_body12.getTree());
            string_literal13=(Token)match(input,20,FOLLOW_20_in_method_definition154); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_20.add(string_literal13);



            // AST REWRITE
            // elements: method_body, method_header
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 13:58: -> ^( METHOD method_header METHOD_BODY method_body )
            {
                // Xpl.g:13:61: ^( METHOD method_header METHOD_BODY method_body )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(METHOD, "METHOD"), root_1);

                adaptor.addChild(root_1, stream_method_header.nextTree());
                adaptor.addChild(root_1, (CommonTree)adaptor.create(METHOD_BODY, "METHOD_BODY"));
                adaptor.addChild(root_1, stream_method_body.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "method_definition"

    public static class method_header_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_header"
    // Xpl.g:15:1: method_header : ( 'method' identifier '(' ')' -> ^( identifier ) | 'method' identifier '(' method_arguments ')' -> ^( identifier method_arguments ) );
    public final XplParser.method_header_return method_header() throws RecognitionException {
        XplParser.method_header_return retval = new XplParser.method_header_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal14=null;
        Token char_literal16=null;
        Token char_literal17=null;
        Token string_literal18=null;
        Token char_literal20=null;
        Token char_literal22=null;
        XplParser.identifier_return identifier15 = null;

        XplParser.identifier_return identifier19 = null;

        XplParser.method_arguments_return method_arguments21 = null;


        CommonTree string_literal14_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree string_literal18_tree=null;
        CommonTree char_literal20_tree=null;
        CommonTree char_literal22_tree=null;
        RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleSubtreeStream stream_method_arguments=new RewriteRuleSubtreeStream(adaptor,"rule method_arguments");
        RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");
        try {
            // Xpl.g:16:5: ( 'method' identifier '(' ')' -> ^( identifier ) | 'method' identifier '(' method_arguments ')' -> ^( identifier method_arguments ) )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==21) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==IDENTIFIER) ) {
                    int LA7_2 = input.LA(3);

                    if ( (LA7_2==22) ) {
                        int LA7_3 = input.LA(4);

                        if ( (LA7_3==23) ) {
                            alt7=1;
                        }
                        else if ( (LA7_3==IDENTIFIER) ) {
                            alt7=2;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 7, 3, input);

                            throw nvae;
                        }
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 2, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // Xpl.g:16:26: 'method' identifier '(' ')'
                    {
                    string_literal14=(Token)match(input,21,FOLLOW_21_in_method_header197); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_21.add(string_literal14);

                    pushFollow(FOLLOW_identifier_in_method_header199);
                    identifier15=identifier();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_identifier.add(identifier15.getTree());
                    char_literal16=(Token)match(input,22,FOLLOW_22_in_method_header201); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_22.add(char_literal16);

                    char_literal17=(Token)match(input,23,FOLLOW_23_in_method_header203); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_23.add(char_literal17);



                    // AST REWRITE
                    // elements: identifier
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 16:54: -> ^( identifier )
                    {
                        // Xpl.g:16:57: ^( identifier )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_identifier.nextNode(), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // Xpl.g:17:26: 'method' identifier '(' method_arguments ')'
                    {
                    string_literal18=(Token)match(input,21,FOLLOW_21_in_method_header236); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_21.add(string_literal18);

                    pushFollow(FOLLOW_identifier_in_method_header238);
                    identifier19=identifier();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_identifier.add(identifier19.getTree());
                    char_literal20=(Token)match(input,22,FOLLOW_22_in_method_header240); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_22.add(char_literal20);

                    pushFollow(FOLLOW_method_arguments_in_method_header242);
                    method_arguments21=method_arguments();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_method_arguments.add(method_arguments21.getTree());
                    char_literal22=(Token)match(input,23,FOLLOW_23_in_method_header244); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_23.add(char_literal22);



                    // AST REWRITE
                    // elements: method_arguments, identifier
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 17:71: -> ^( identifier method_arguments )
                    {
                        // Xpl.g:17:74: ^( identifier method_arguments )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_identifier.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_method_arguments.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "method_header"

    public static class method_arguments_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_arguments"
    // Xpl.g:19:1: method_arguments : identifier ( ',' identifier )* ;
    public final XplParser.method_arguments_return method_arguments() throws RecognitionException {
        XplParser.method_arguments_return retval = new XplParser.method_arguments_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal24=null;
        XplParser.identifier_return identifier23 = null;

        XplParser.identifier_return identifier25 = null;


        CommonTree char_literal24_tree=null;

        try {
            // Xpl.g:19:17: ( identifier ( ',' identifier )* )
            // Xpl.g:19:26: identifier ( ',' identifier )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_identifier_in_method_arguments266);
            identifier23=identifier();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, identifier23.getTree());
            // Xpl.g:19:37: ( ',' identifier )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==24) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // Xpl.g:19:38: ',' identifier
            	    {
            	    char_literal24=(Token)match(input,24,FOLLOW_24_in_method_arguments269); if (state.failed) return retval;
            	    pushFollow(FOLLOW_identifier_in_method_arguments272);
            	    identifier25=identifier();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, identifier25.getTree());

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "method_arguments"

    public static class method_body_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_body"
    // Xpl.g:21:1: method_body : ( atomic_operation )+ ;
    public final XplParser.method_body_return method_body() throws RecognitionException {
        XplParser.method_body_return retval = new XplParser.method_body_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        XplParser.atomic_operation_return atomic_operation26 = null;



        try {
            // Xpl.g:21:12: ( ( atomic_operation )+ )
            // Xpl.g:21:26: ( atomic_operation )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // Xpl.g:21:26: ( atomic_operation )+
            int cnt9=0;
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( ((LA9_0>=IDENTIFIER && LA9_0<=STRING)||LA9_0==22||LA9_0==25||LA9_0==27||LA9_0==41) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // Xpl.g:21:26: atomic_operation
            	    {
            	    pushFollow(FOLLOW_atomic_operation_in_method_body293);
            	    atomic_operation26=atomic_operation();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, atomic_operation26.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt9 >= 1 ) break loop9;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(9, input);
                        throw eee;
                }
                cnt9++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "method_body"

    public static class conditional_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "conditional"
    // Xpl.g:23:1: conditional : 'if' expression ( newline )? atomic_operations_list 'end' -> ^( IF expression IF_BODY atomic_operations_list ) ;
    public final XplParser.conditional_return conditional() throws RecognitionException {
        XplParser.conditional_return retval = new XplParser.conditional_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal27=null;
        Token string_literal31=null;
        XplParser.expression_return expression28 = null;

        XplParser.newline_return newline29 = null;

        XplParser.atomic_operations_list_return atomic_operations_list30 = null;


        CommonTree string_literal27_tree=null;
        CommonTree string_literal31_tree=null;
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_atomic_operations_list=new RewriteRuleSubtreeStream(adaptor,"rule atomic_operations_list");
        RewriteRuleSubtreeStream stream_newline=new RewriteRuleSubtreeStream(adaptor,"rule newline");
        try {
            // Xpl.g:23:12: ( 'if' expression ( newline )? atomic_operations_list 'end' -> ^( IF expression IF_BODY atomic_operations_list ) )
            // Xpl.g:23:26: 'if' expression ( newline )? atomic_operations_list 'end'
            {
            string_literal27=(Token)match(input,25,FOLLOW_25_in_conditional313); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_25.add(string_literal27);

            pushFollow(FOLLOW_expression_in_conditional315);
            expression28=expression();
